@@ -8,13 +8,12 @@
     <name>fluxx-web</name>
     <url>http://fluxx.fr.cr/</url>
     
-    <properties>
-        <glassfish-version>3.0</glassfish-version>
-        <jsf-version>2.0.2-b10</jsf-version>
-        <commons-lang-version>2.3</commons-lang-version>
-        <environment-name>development</environment-name>
-    </properties>
-
+    <parent>
+    	<groupId>fr.kaddath.apps.fluxx</groupId>
+    	<artifactId>fluxx</artifactId>
+    	<version>1.0</version>
+    </parent>
+    
     <scm>
         <connection>scm:git://github.com/jsmadja/fluxx.git/fluxx-web</connection>
         <developerConnection>scm:git://github.com/jsmadja/fluxx.git/fluxx-web</developerConnection>
@@ -83,17 +82,6 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <inherited>true</inherited>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <version>2.3.1</version>
-                    <compilerArgument>-Djava.endorsed.dirs=${glassfish-home}/modules/endorsed</compilerArgument>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
                     <warName>fluxx</warName>
@@ -103,58 +91,4 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>glassfish-maven-repository.dev.java.net</id>
-            <name>GlassFish Maven Repository</name>
-            <url>http://download.java.net/maven/glassfish</url>
-        </repository>
-        <repository>
-            <id>EclipseLink Repo</id>
-            <name>Eclipse maven repository http://eclipse.ialto.org/rt/eclipselink/maven.repo/</name>
-            <url>http://mirror.csclub.uwaterloo.ca/eclipse/rt/eclipselink/maven.repo/</url>
-        </repository>
-        <repository>
-            <id>Maven2</id>
-            <url>http://repo1.maven.org/maven2</url>
-            <name>Maven2</name>
-        </repository>
-        <repository>
-            <id>Maven2 Repo 2</id>
-            <url>http://repo2.maven.org/maven2</url>
-            <name>Maven2 Repo 2</name>
-        </repository>
-        <repository>
-            <id>JBoss</id>
-            <url>http://repository.jboss.com/maven2</url>
-            <name>JBoss</name>
-        </repository>
-                <repository>
-            <id>java.net2</id>
-            <name>Repository hosting the jee6 artifacts</name>
-            <url>http://download.java.net/maven/2</url>
-        </repository>
-        <repository>
-            <id>Java</id>
-            <url>http://download.java.net/maven/2/</url>
-            <name>Java</name>
-        </repository>
-                <repository>
-            <url>http://download.java.net/maven/2/</url>
-            <id>jsf20</id>
-            <layout>default</layout>
-            <name>Repository for library Library[jsf20]</name>
-        </repository>
-        <repository>
-            <id>sourceforge</id>
-            <url>http://oss.sonatype.org/content/groups/sourceforge/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-
-    </repositories>
 </project>
